--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "models",
   "version": "0.1.0",
   "author": "alexsinfarosa <as898@cornell.edu>",
-  "homepage": "http://cfw.newa.cornell.edu/",
+  "homepage": "https://alexsinfarosa.github.io/cranberry-fruitworm-model/",
   "description": "NEWA Cranberry Fruitworm Model",
   "private": true,
   "dependencies": {
